--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "@supabase/supabase-js": "^2.43.5",
-    "expo": "~51.0.14",
-    "expo-secure-store": "^13.0.1",
+    "expo": "~51.0.22",
+    "expo-auth-session": "^5.5.2",
+    "expo-linking": "^6.3.1",
+    "expo-secure-store": "~13.0.2",
     "expo-status-bar": "~1.12.1",
+    "expo-web-browser": "^13.0.3",
     "react": "18.2.0",
-    "react-native": "0.74.2",
+    "react-native": "0.74.3",
     "react-native-dotenv": "^3.4.11",
-    "react-native-gesture-handler": "^2.17.0",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-url-polyfill": "^2.0.0"
   },
   "devDependencies": {
