--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-native": "0.74.3",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-pager-view": "6.3.0",
+    "react-native-tab-view": "^3.5.2",
     "react-native-url-polyfill": "^2.0.0"
   },
   "devDependencies": {
